# bincode-trait-derive

./: .gitignore  Cargo.toml  devenv.nix  devenv.yaml
src/: lib.rs
tests/: Cargo.toml  associated_generic_test.rs  associated_types_test.rs  basic_test.rs  expanded_code.rs  multivariate_polynomial_test.rs
tests/src/: lib.rs
