[workspace]
members = ["tests"]

[package]
name = "bincode-trait-derive"
version = "0.1.1"
edition = "2024"
description = "A derive macro for bincode that allows generics with traits as context"
license = "MIT"
authors = ["Lucien Huber", "Mathijs Fraaije"]


[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["derive"] }
quote = "1.0"
proc-macro2 = "1.0"
bincode = "2.0.1"
